--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 @keyframes fade-in {
   from {
-    opacity: 0;
+    opacity: 0.5;
   }
 
   to {
@@ -15,4 +15,5 @@
 .fade-in {
   animation-name: fade-in;
   animation-duration: 500ms;
+  animation-timing-function: ease-in-out;
 }
